fixed button content overflow :smiley_cat:

--- a/src/styles/polls.scss
+++ b/src/styles/polls.scss
@@ -2,7 +2,7 @@
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     grid-gap: 35px;
-    grid-auto-rows: 160px;
+    grid-auto-rows: 155px;
     .pollItem {
         border: 1px solid $primaryColour;
         list-style-type: none;
@@ -25,11 +25,12 @@
             }
         }
         .voteButtons {
-            height: 25%;
             display: flex;
             justify-content: center;
         }
         button {
+            padding: 10px 0;
+            height: auto;
             font-family: $fontBase;
             font-weight: 700;
             border: 1px solid $primaryColour;
@@ -39,6 +40,7 @@
             background: none;
             color: $primaryColour;
             outline: none;
+            cursor: pointer;
             p {
                 display: none;
             }
